Fix frontpage layout on small resolutions
vw ugh... Just need to remember to clamp that to max-width 100% always.

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -52,6 +52,10 @@ code {
     padding: 0.25em;
 }
 
+.frontpage, .post {
+    max-width: 100%;
+}
+
 .frontpage {
     .front-header, .front-motto {
         margin-bottom: 0.5em;
@@ -68,7 +72,7 @@ code {
         box-shadow: 0 0 1em 0.05em rgba(0,0,0,0.5);
     }
 
-    .post__heading {
+    .front__heading {
         background: #323232;
         text-align: center;
     }
@@ -79,11 +83,6 @@ code {
         width: 100px;
         height: 100px;
         float: right;
-    }
-
-    .btn--buy {
-        border: 2px #fff solid;
-        background: #fff;
     }
 }
 
